--- a/Laundry/app/src/main/res/layout/activity_main.xml
+++ b/Laundry/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tanggal"
         android:text="ini tanggal"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
         android:fontFamily="@font/poppins"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,157 +35,111 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview1"
-         android:layout_width="match_parent"
-        android:layout_height="190dp"
-        app:layout_constraintTop_toBottomOf="@+id/tanggal">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tvestimasi"
-            android:layout_width="190dp"
-            android:layout_height="35dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="Estimasi hari ini"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/transaksi"
-            app:layout_constraintEnd_toStartOf="@+id/tvjumlahestimasi"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/tvjumlahestimasi"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="Rp.400"
-            android:textSize="20sp"
-            android:layout_marginEnd="12dp"
-            android:layout_alignParentEnd="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tvestimasi"
-            app:layout_constraintBottom_toTopOf="@+id/transaksi"
-            >
-        </TextView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/transaksi"
-            android:layout_width="110dp"
-            android:layout_height="120dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvestimasi"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toStartOf="@+id/pelanggan">
-
-            <FrameLayout
+        android:layout_width="320dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="5dp"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintTop_toBottomOf="@id/tanggal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tvestimasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Estimasi Hari ini"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="15dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+            <TextView
+                android:id="@+id/tvjumlahestimasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rp.40.000,-"
+                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="60dp"
+                android:textAlignment="textEnd"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvestimasi"
+                app:layout_constraintEnd_toEndOf="parent" />
+            <View
+                android:id="@+id/vLine"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:src="@drawable/troli" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/poppins_bold"
-                        android:gravity="center"
-                        android:text="Transaksi"
-                        android:textColor="#333"
-                        android:textSize="10sp" />
-                </LinearLayout>
-            </FrameLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/pelanggan"
-            android:layout_width="110dp"
-            android:layout_height="120dp"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/laporan"
-            app:layout_constraintStart_toEndOf="@+id/transaksi"
-            app:layout_constraintTop_toBottomOf="@+id/tvestimasi">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:src="@drawable/troli" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/poppins_bold"
-                        android:gravity="center"
-                        android:text="Pelanggan"
-                        android:textColor="#333"
-                        android:textSize="10sp" />
-                </LinearLayout>
-            </FrameLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/laporan"
-            android:layout_width="110dp"
-            android:layout_height="120dp"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tvestimasi"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/pelanggan"
-            >
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:src="@drawable/troli" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/poppins_bold"
-                        android:gravity="center"
-                        android:text="Laporan"
-                        android:textColor="#333"
-                        android:textSize="10sp" />
-                </LinearLayout>
-            </FrameLayout>
-        </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+                android:layout_height="1dp"
+                android:background="#CCCCCC"
+                app:layout_constraintTop_toBottomOf="@id/tvestimasi"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="0dp" />
+            <ImageView
+                android:id="@+id/ivTransaksi"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/transaksi"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/vLine"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ivPelanggan" />
+            <TextView
+                android:id="@+id/tvTransaksi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Transaksi"
+                android:textSize="15sp"
+                android:fontFamily="@font/poppins_bold"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/ivTransaksi"
+                app:layout_constraintStart_toStartOf="@id/ivTransaksi"
+                app:layout_constraintEnd_toEndOf="@id/ivTransaksi" />
+            <ImageView
+                android:id="@+id/ivPelanggan"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/pelanggan"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/vLine"
+                app:layout_constraintStart_toEndOf="@id/ivTransaksi"
+                app:layout_constraintEnd_toStartOf="@id/ivLaporan" />
+            <TextView
+                android:id="@+id/tvPelanggan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pelanggan"
+                android:textSize="15sp"
+                android:fontFamily="@font/poppins_bold"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/ivPelanggan"
+                app:layout_constraintStart_toStartOf="@id/ivPelanggan"
+                app:layout_constraintEnd_toEndOf="@id/ivPelanggan" />
+            <ImageView
+                android:id="@+id/ivLaporan"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/laporan"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/vLine"
+                app:layout_constraintStart_toEndOf="@id/ivPelanggan"
+                app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/tvLaporan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Laporan"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="15sp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/ivLaporan"
+                app:layout_constraintStart_toStartOf="@id/ivLaporan"
+                app:layout_constraintEnd_toEndOf="@id/ivLaporan" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/siapmelayani"
@@ -199,7 +154,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardview1"/>
+        app:layout_constraintTop_toBottomOf="@id/cardview1"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -236,7 +191,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/akun" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -275,7 +230,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/layanan" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -314,7 +269,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/tambahan" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -353,7 +308,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/pegawai" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -392,7 +347,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/cabang" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -431,7 +386,7 @@
                 <ImageView
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/troli" />
+                    android:src="@drawable/print" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -439,7 +394,7 @@
                     android:layout_marginTop="5dp"
                     android:fontFamily="@font/poppins_bold"
                     android:gravity="center"
-                    android:text="Tambahan"
+                    android:text="Printer"
                     android:textColor="#333"
                     android:textSize="10sp" />
             </LinearLayout>
