--- a/Laundry/app/src/main/res/layout/activity_main.xml
+++ b/Laundry/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tanggal"
-        android:text="ini tanggal"
+        android:text="tanggal"
         android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:layout_marginEnd="15dp"
